# reader-api

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2020-02-29-145330_create_canonical_feeds/: down.sql  up.sql
migrations/2020-02-29-173353_create_feeds/: up.sql
seeds/: seed.sql
src/: api.rs  main.rs  models.rs  schema.rs
src/db/: canonical_feeds.rs  mod.rs
